tests/errors/undefined_variable.js
// Error: Using undefined variable
function undefined_variable() {
  let x = y + 5;
  return x;
}

undefined_variable();
